<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foodList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context="com.ciconi.assignmentrestaurant.Food">

    <TextView
        android:id="@+id/tittleFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/options"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Holo"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="ObsoleteLayoutParam,UnusedAttribute"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="87dp" />

    <CheckBox
        android:id="@+id/checkbox_meat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:buttonTint="@android:color/background_light"
        android:text="@string/foodOpt1"
        android:textColor="@color/colorAccent" />

    <CheckBox
        android:id="@+id/checkbox_cheese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/background_light"
        android:text="@string/foodOpt2"
        android:textColor="@color/colorAccent" />

    <CheckBox
        android:id="@+id/checkbox_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/background_light"
        android:text="@string/foodOpt3"
        android:textColor="@color/colorAccent" />

    <CheckBox
        android:id="@+id/checkbox_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/background_light"
        android:text="@string/foodOpt4"
        android:textColor="@color/colorAccent" />

    <CheckBox
        android:id="@+id/checkbox_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/background_light"
        android:text="@string/foodOpt5"
        android:textColor="@color/colorAccent" />

    <CheckBox
        android:id="@+id/checkbox_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/background_light"
        android:text="@string/foodOpt6"
        android:textColor="@color/colorAccent" />

    <CheckBox
        android:id="@+id/checkbox_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/background_light"
        android:text="@string/foodOpt7"
        android:textColor="@color/colorAccent" />

    <CheckBox
        android:id="@+id/checkbox_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/background_light"
        android:text="@string/foodOpt8"
        android:textColor="@color/colorAccent" />

    <CheckBox
        android:id="@+id/checkbox_9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/background_light"
        android:text="@string/foodOpt9"
        android:textColor="@color/colorAccent" />

    <CheckBox
        android:id="@+id/checkbox_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/background_light"
        android:text="@string/foodOpt10"
        android:textColor="@color/colorAccent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonBack"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/back"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonCheckOut"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="onCLick"
            android:text="@string/finish"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>
