<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:background="@drawable/back"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.ciconi.assignmentrestaurant.CustomerInfo">

    <TextView
        android:id="@+id/CustomerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"

        android:fontFamily="sans-serif-condensed"
        android:text="Information"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Holo"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="ObsoleteLayoutParam,UnusedAttribute"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="87dp" />

    <EditText
        android:id="@+id/signup_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/customerName"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/background_light"
        android:maxLength="100"/>

    <EditText
        android:id="@+id/signup_input_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text|textPostalAddress"
        android:selectAllOnFocus="false"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/background_light"
        android:maxLength="100"/>

    <EditText
        android:id="@+id/signup_input_Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/background_light"
        android:maxLength="16"/>

    <EditText
        android:id="@+id/signup_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/background_light"
        android:maxLength="100"/>

    <EditText
        android:id="@+id/signup_input_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/background_light"
        android:maxLength="2"/>

    <TextView
        android:id="@+id/gender_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        android:text="@string/gender"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        />

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/gender_textview"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male"
            android:textColor="@color/colorAccent" />

        <RadioButton
            android:id="@+id/female_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/colorAccent" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <Button
            android:id="@+id/buttonBack"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:text="@string/back"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonCheckOut"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/finsh"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>


</LinearLayout>
